--- a/styles.css
+++ b/styles.css
@@ -254,3 +254,31 @@ main{
     color: var(--warm-black);
     font-weight: 300;
 }
+
+.currency-table--grid{
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 0 auto;
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: repeat(2, 147px);
+    grid-template-rows: repeat(4, 60px);
+    place-content: center;
+    gap: 3px;
+    border-radius: 15px;
+}
+
+.currency-table--grid .item-name{
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.9rem;
+    color: var(--grey);
+}
+
+.currency-table--grid .item-price{
+    font-size: 1.4rem;
+    font-weight: normal;
+    line-height: 1.7rem;
+    color: #757575;
+}
