--- a/styles.css
+++ b/styles.css
@@ -195,19 +195,19 @@ main{
     background-color: var(--just-white);
 }
 
-.currency-table--container .table__top-left{
+.table__top-left{
     border-radius: 15px 0 0 0 ;
 }
 
-.currency-table--container .table__top-right{
+.table__top-right{
     border-radius: 0 15px 0 0 ;
 }
 
-.currency-table--container .table__bottom-left{
+.table__bottom-left{
     border-radius: 0 0 0 15px;
 }
 
-.currency-table--container .table__bottom-right{
+ .table__bottom-right{
     border-radius: 0 0 15px 0;
 }
 
@@ -264,9 +264,15 @@ main{
     grid-auto-flow: column;
     grid-template-columns: repeat(2, 147px);
     grid-template-rows: repeat(4, 60px);
-    place-content: center;
-    gap: 3px;
-    border-radius: 15px;
+    place-items: center;
+    gap: 2px;
+}
+
+.currency-table--item{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
 }
 
 .currency-table--grid .item-name{
@@ -274,11 +280,22 @@ main{
     font-weight: 500;
     line-height: 1.9rem;
     color: var(--grey);
+    background-color: var(--just-white);
 }
 
 .currency-table--grid .item-price{
+
     font-size: 1.4rem;
     font-weight: normal;
     line-height: 1.7rem;
     color: #757575;
+    background-color: var(--just-white);
+}
+
+.currency-table--title__blue{
+    color: var(--secondary-blue);
+}
+
+.currency-table--date__blue{
+    background-color: var(--soft-blue);
 }
