build: product detail cards and backgroundIMG added

--- a/styles.css
+++ b/styles.css
@@ -262,8 +262,8 @@ main{
     margin: 0 auto;
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: repeat(2, 147px);
-    grid-template-rows: repeat(4, 60px);
+    grid-template-columns: repeat(2, minmax(0px, 147px));
+    grid-template-rows: repeat(4, minmax(0px, 60px));
     place-items: center;
     gap: 2px;
 }
@@ -284,7 +284,6 @@ main{
 }
 
 .currency-table--grid .item-price{
-
     font-size: 1.4rem;
     font-weight: normal;
     line-height: 1.7rem;
@@ -298,4 +297,121 @@ main{
 
 .currency-table--date__blue{
     background-color: var(--soft-blue);
+}
+
+.main-product-detail{
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    padding: 20px 10px;
+    background-color:  var(--black);
+}
+
+.product-detail--batata-logo{
+    position: absolute;
+    width: 40px;
+    height: 25px;
+    background-image: url("./assets/icons/batata.svg");
+    top: -10px;
+    left: calc(50% - 20px);
+}
+
+.product-detail--title{
+    width: 90%;
+    min-width: 288px; 
+    height: auto;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+
+}
+
+.product-detail--title h2{
+    margin-bottom: 20px;
+    font-size: 2.4rem;
+    line-height: 2.6rem;
+    font-weight: bold;
+    color: var(--just-white);
+}
+
+.product-detail--title p{
+    margin-bottom: 20px;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    font-weight: 500;
+    color: #808080;
+}
+
+.product-detail-card{
+    width: 90%;
+    min-width: 288px;
+    max-width: 400px;
+    min-height: 152px;
+    margin: 15px auto;
+    padding: 18px 16px;
+    background-color: var(--warm-black);
+    box-shadow: 0px 4px 8px 0px #00000029;
+    border-radius: 4px;
+}
+
+.product--card-title{
+    margin-bottom: 10px;
+    font-size: 1.8rem;
+    line-height: 1.8rem;
+    font-weight: 700;
+    color: var(--just-white);
+}
+
+.product--card-body{
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    font-weight: 500;
+    color: #808080;
+}
+
+.product-detail-card .icon{
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    margin-bottom: 10px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.product-detail-card .clock-icon{
+    background-image: url("./assets/icons/clock.svg");
+}
+
+.product-detail-card .eye-icon{
+    background-image: url("./assets/icons/eye.svg");
+}
+
+.product-detail-card .money-icon{
+    background-image: url("./assets/icons/dollar-sign.svg");
+}
+
+.product-detail-card .check-icon{
+    background-image: url("./assets/icons/check-circle.svg");
+}
+
+.bitcoin-img-container{
+    width: 100%;
+    min-width: 320px;
+    height: 50vh;
+    background-image: url("./assets/img/bitcoinbaby2x.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+
+.bitcoin-img-container h2{
+    padding-top: 60px;
+    margin: 0 auto;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
 }
