--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@
 html{
     font-size: 62.5%;
     font-family: 'DM Sans', sans-serif; /* Fuente que predomine (fuente base) */
+    scroll-behavior: smooth;
 }
 
 header {
@@ -291,7 +292,7 @@ main{
     background-color: var(--just-white);
 }
 
-.currency-table--title__blue{
+.main-currency-table .currency-table--title__blue{
     color: var(--secondary-blue);
 }
 
@@ -414,4 +415,122 @@ main{
     font-weight: bold;
     line-height: 2.6rem;
     color: var(--just-white);
+}
+
+.main-plans-container{
+    width: 100%;
+    min-width: 320px;
+    padding-bottom: 70px;
+    background-color: var(--off-white);
+    text-align: center;
+}
+
+.plans--title{
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 50px auto;
+}
+
+.plans--title h2{
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 2.6rem;
+    margin-bottom: 30px;
+    color: var(--black);
+}
+
+.plans--title p{
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #757575;
+}
+
+.plans-container-card{
+    position: relative;
+    width: 50%;
+    min-width: 190px;
+    max-width: 300px;
+    height: 250px;
+    margin: 50px auto 0px;
+    padding: 0px 15px;
+    background: var(--just-white);
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px 0px rgba(89, 73, 30, 0.16);
+}
+
+.plans-container-card .recommended{
+    position: absolute;
+    width: 120px;
+    height: 31px;
+    padding: 8px;
+    left: calc(50% - 60px);
+    top: -15px;
+    background-color: var(--bitcoin-orange);
+    border-radius: 8px;
+    color: var(--just-white);
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 1.4rem;
+}
+
+.plan-info-container{
+    width: 100%;
+    height: 100%;
+}
+
+.plan-card--title{
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--black);
+}
+
+.plan-card--price{
+    display: inline-block;
+    position: relative;
+    padding: 5px 0px;
+    font-size: 5.2rem;
+    font-weight: bold;
+    line-height: 6.3rem;
+    color: black;
+}
+
+.plan-card--price span {
+    position: absolute;
+    top: -6px;
+    left: -10px;
+    font-size: 1.2rem;
+    font-weight: 300;
+    color: rgba(54, 54, 54, 1);
+}
+
+.plan-card--saving{
+    font-size: 1.2rem;
+    color: #757575;
+}
+
+
+.plan-card-ca{
+    width: 150px;
+    height: 48px;
+    margin-top: 20px;
+    border-radius: 4px;
+    background-color: var(--just-white);
+    border: 2px solid var(--bitcoin-orange);
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--black);
+    font-family: 'DM Sans', sans-serif;
+}
+
+.plan-card-ca span{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url("./assets/icons/orange-right-arrow.svg");
+    vertical-align: text-bottom;
 }
