fix: corrected margin in cards

--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,8 @@ main{
 
 .main-tables-container{
     display: flex;
-    width: 320px;
+    width: 100%;
+    min-width: 320px;
     overflow: scroll;
     overscroll-behavior-x: contain;
     scroll-snap-type: x mandatory;
@@ -169,7 +170,7 @@ main{
     min-width: 235px;
     max-width: 500px;
     height: 360px;
-    margin: 0 42.5px;
+    margin: 0 50%;
     font-family: "Inter", sans-serif;
 }
 
@@ -459,7 +460,8 @@ main{
 .plans-container--slider{
     display: flex;
     position: relative;
-    width: 320px;
+    min-width: 320px;
+    width: 100%;
     overflow: scroll;
     overscroll-behavior-x: contain;
     scroll-snap-type: x mandatory;
@@ -472,7 +474,7 @@ main{
     min-width: 190px;
     max-width: 300px;
     height: 250px;
-    margin: 40px 65px 20px;
+    margin: 40px 33.3% 20px;
     padding: 0px 15px;
     background: var(--just-white);
     border-radius: 8px;
