feat: bigger tablet and laptop breakpoint added

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,11 +1,12 @@
+
+
 .main-tables-container,
 .plans-container--slider{
+    justify-content: center;
+    overflow: hidden;
 }
 
 .main-currency-table{
     margin: 0; 
 }
 
-.plans-container-card{
-    margin: 40px 80px 20px ;
-}
