fix: performance improved

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,4 +1,7 @@
 
+.bitcoin-img-container{
+    background-image: url("../assets/img/bitcoinbaby2x.png");
+}
 
 .main-tables-container,
 .plans-container--slider{
