--- a/styles.css
+++ b/styles.css
@@ -412,7 +412,7 @@ main{
     width: 100%;
     min-width: 320px;
     height: 50vh;
-    background-image: url("./assets/img/bitcoinbaby2x.jpg");
+    background-image: url("./assets/img/bitcoinbaby.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
